--- a/server-side/express/express-locallibrary-tutorial/package.json
+++ b/server-side/express/express-locallibrary-tutorial/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "express-validator": "^6.13.0",
+    "helmet": "^4.6.0",
     "http-errors": "~1.6.3",
     "luxon": "^2.0.2",
     "mongoose": "^6.0.11",
